--- a/app1/angular.json
+++ b/app1/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "preserveSymlinks": false
           },
           "configurations": {
             "production": {
